--- a/src/components/App.css
+++ b/src/components/App.css
@@ -12,6 +12,11 @@ body,
   overflow-y: scroll;
 }
 
+.messages__progress {
+  height: 58vh;
+  overflow-y: scroll;
+}
+
 /* MessageForm.js */
 .message__form {
   position: fixed !important;
@@ -30,4 +35,9 @@ body,
 
 .message__image {
   padding: 1em;
+}
+
+/* ProgressBar.js */
+.progress__bar {
+  margin: 0.3em 0 0 0 !important;
 }
